# rtop

./: Cargo.toml  DOCKER_DEV.md  LICENSE  PLAN.md  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
.rpm/: cargo-rpm.toml
Formula/: rtop.rb
src/: app.rs  config.rs  localization.rs  main.rs
src/collectors/: broker.rs  containers.rs  cpu_times.rs  database.rs  disk.rs  gpu.rs  mod.rs  network.rs  node_runtime.rs  process_net.rs  proxy.rs  psi.rs  swarm.rs  system.rs  tcp_stats.rs
src/models/: container.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs  psi.rs  swarm.rs
src/ui/: history.rs  mod.rs  theme.rs
src/ui/views/: container_detail.rs  container_logs.rs  disk_selector.rs  help_modal.rs  main_view.rs  mod.rs  network_stats.rs  nic_selector.rs  node_runtime_panel.rs  process_detail.rs  router_latency.rs  swarm.rs
src/ui/widgets/: container_table.rs  cpu_bar.rs  cpu_cores.rs  disk_bar.rs  gpu_widget.rs  history_chart.rs  memory_bar.rs  mod.rs  network_widget.rs  nic_selector.rs  process_table.rs  psi_widget.rs
stitch_rtop/obsidian_terminal/: DESIGN.md
stitch_rtop/obsidian_tui_detalle_de_contenedor_simetr_a_absoluta/: code.html
stitch_rtop/obsidian_tui_gesti_n_de_contenedores_simetr_a_total/: code.html
stitch_rtop/obsidian_tui_propuesta_final_consolidada_procesos/: code.html
test-envs/nodejs-inspector/: app.js  docker-compose.yml
tests/: layout_tests.rs
