[package]
name = "rtop"
version = "0.1.0"
edition = "2021"
default-run = "rtop"

[[bin]]
name = "rtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
bollard = "0.16"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
bytesize = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
futures-util = "0.3"
