[package]
name = "rtop"
version = "0.1.0"
edition = "2021"
default-run = "rtop"
description = "A modern TUI system resource monitor with Docker and disk I/O tracking"
readme = "README.md"
homepage = "https://github.com/usuario/rtop"
repository = "https://github.com/usuario/rtop"
license = "MIT OR Apache-2.0"
keywords = ["system", "monitor", "tui", "docker", "resources"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "rtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
bollard = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
bytesize = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
futures-util = "0.3"

[package.metadata.deb]
maintainer = "CTO <cto@rtop.ing>"
assets = [
    ["target/release/rtop", "usr/bin/rtop", "755"],
    ["README.md", "usr/share/doc/rtop/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtop", dest = "/usr/bin/rtop", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/rtop/README.md", mode = "0644" }
]

[profile.release]
opt-level = 3
lto = true          # Link-Time Optimization
codegen-units = 1   # Mejor optimización, compile time más lento
strip = true        # Eliminar símbolos de debug del binario final
