[package]
name = "rtopm"
version = "0.3.6"
edition = "2021"
default-run = "rtop"
description = "A modern TUI system resource monitor with Docker and disk I/O tracking"
readme = "README.md"
homepage = "https://github.com/rebienkrdns/rtop"
repository = "https://github.com/rebienkrdns/rtop"
license = "MIT"
keywords = ["system", "monitor", "tui", "docker", "resources"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "rtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
bollard = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
bytesize = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
tokio-postgres = "0.7"
mysql_async = "0.34"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3"
nvml-wrapper = "0.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[package.metadata.deb]
maintainer = "CTO <cto@rtop.ing>"
assets = [
    ["target/release/rtop", "usr/bin/rtop", "755"],
    ["README.md", "usr/share/doc/rtop/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtop", dest = "/usr/bin/rtop", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/rtop/README.md", mode = "0644" }
]

[profile.release]
opt-level = 3
lto = true          # Link-Time Optimization
codegen-units = 1   # Mejor optimización, compile time más lento
strip = true        # Eliminar símbolos de debug del binario final
